--- a/tickerbackend/package.json
+++ b/tickerbackend/package.json
@@ -17,9 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^7.0.2",
     "helmet": "^7.0.0",
     "mongoose": "^6.3.4",
     "multer": "^1.4.5-lts.1",
